Fix CSS property 'justify-content' and update spacing

--- a/style.css
+++ b/style.css
@@ -990,7 +990,7 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: centre;
+    justify-content: center;
     background-color: #E0E0E0;
     color: #001C55;
     padding: 1em;
@@ -1005,7 +1005,7 @@ a {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    space:1em;
+    gap:1em;
 }
 
 .menu>li {
